<resources>
    <string name="app_name">USB_Online</string>
    <string name="sdd">速度控制器</string>
    <string name="sld">轉速指示燈</string>
    <string name="tx">的士咪表</string>
    <string name="dipan">底盤</string>
    <string name="paper">紙質</string>
    <string name="electronic">電子</string>
    <string name="electronic_data_recorder">電子數據記錄器</string>
    <string name="x">新標記</string>
    <string name="y">已核實</string>
    <string name="r">重新核實</string>
    <string name="n">未核實</string>
    <string name="scan">掃描</string>
    <string name="insert">新增</string>
    <string name="id">封簽ID:</string>
    <string name="zl">封簽種類:</string>
    <string name="wz">封簽位置:</string>
    <string name="zt">封簽狀態:</string>
    <string name="usb_connected">USB連接成功</string>
    <string name="usb_off">USB已經斷開</string>
    <string name="send_ok">發送成功</string>
    <string name="no_cun_zai">掃描的條形碼不在列表中</string>
    <string name="read_failed">掃描失敗</string>
    <string name="checkusb">請檢查USB是否已連接</string>
    <string name="receivefailed">接收數據為空.</string>
    <string name="jly">電子記錄儀</string>
    <string name="yyh">預約號:  </string>
    <string name="zh">站號:  </string>
    <string name="zx">站線:  </string>
    <string name="clsbdh">車輛識別代號:  </string>
    <string name="fssj">發送數據</string>
    <string name="jssj">接收數據</string>
    <string name="qcsj">清除數據</string>
    <string name="login_tishi1">輸入車牌號碼</string>
    <string name="login_cphm">車牌號碼:</string>
    <string name="login_qr">確定</string>
    <string name="login_tc">退出</string>
    <string name="entry_tishi1">請輸入舊條碼</string>
    <string name="entry_tishi2">請輸入新條碼</string>
    <string name="btn_delete">刪除</string>
    <string name="remind">資料已經存儲，請放手機在插座上</string>
    <string name="login_change_y">輸入預約號碼</string>
    <string name="setting">設置</string>
    <string name="login_tishi2">輸入預約號碼</string>
    <string name="login_change_c">輸入車牌號碼</string>
    <string name="login_yyhm">預約號碼:</string>
    <string name="login_cllx">車輛類型:</string>
    <string name="taxi">的士</string>
    <string name="bus">巴士/小巴士</string>
    <string name="zw">中文</string>
    <string name="yw">英文</string>
    <string name="setting_toast">車輛類型為空，請選擇車輛類型</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="tip_title">提示</string>
    <string name="tip_content">已經切換了中英語言，程序需重啟，需要切換嗎？</string>
    <string name="cllx_tip">請預先設置車輛類型</string>
    <string name="cllx_tip1">輸入的號碼為空</string>
    <string name="transducer">傳感器</string>
    <string name="meter">的士米</string>
    <string name="new_seal_tip">選擇位置類型應為唯壹</string>
    <string name="shuliang">數量：</string>
    <string name="other">其他</string>
    <string name="get_today_data">下載當天數據</string>
    <string name="cllx_tip2">請先下載當天數據</string>
    <string name="cllx_tip3">當前號碼不是當天數據</string>
</resources>
