<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="12dp">

    <TextView
            android:id="@+id/login_tishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tishi1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    <TextView
            android:id="@+id/login_tishi1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/login_cphm"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    <EditText
            android:id="@+id/edit_cphm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:theme="@style/MyEditText"
            android:textSize="20sp"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/login_cllx"/>
        <TextView
                android:id="@+id/cllx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="XXX"/>
    </LinearLayout>

    <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_change_y"
                />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        <Button
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/setting"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/f5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tc"
                />

        <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        <Button
                android:id="@+id/f8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_qr"
                />
    </LinearLayout>
</LinearLayout>