<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="12dp">

    <TextView
            android:id="@+id/login_tishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_tishi2"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/m_recycler_view"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:overScrollMode="never"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/shuliang"/>
        <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="0"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_taxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:id="@+id/transducer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/transducer"
                />

        <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>

        <CheckBox
                android:id="@+id/meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/meter"/>

        <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>

        <CheckBox
                android:id="@+id/taxi_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/other"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_bus"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/sdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/sdd"/>

            <CheckBox
                    android:id="@+id/sld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/sld"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/edrd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/electronic_data_recorder"/>

            <CheckBox
                    android:id="@+id/bus_null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/other"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/f1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_delete"/>

        <Button
                android:id="@+id/f5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_tc"/>

        <Button
                android:id="@+id/f8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_qr"/>
    </LinearLayout>
</LinearLayout>