<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="12dp">

    <TextView
            android:id="@+id/login_tishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/f5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login_tc"/>

        <Button
                android:id="@+id/f8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login_qr"/>
    </LinearLayout>
</LinearLayout>