<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:text="@string/clsbdh"/>

            <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text=""/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:text="@string/zh"/>

            <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text=""/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:text="@string/yyh"/>

            <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text=""/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:text="@string/zx"/>

            <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text=""/>
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/m_recycler_view"
            android:focusableInTouchMode="false"
            android:background="@color/gray"
            android:focusable="false"
            android:overScrollMode="never"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="5dp"-->
    <!--android:layout_marginEnd="5dp"-->
    <!--android:layout_marginBottom="10dp">-->

    <!--<Button-->
    <!--android:id="@+id/btnconnect"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_weight="1"-->
    <!---->
    <!--android:textColor="@color/black"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="RECEIVE"/>-->

    <!--<View-->
    <!--android:layout_width="10dp"-->
    <!--android:layout_height="1dp"/>-->

    <!--<Button-->
    <!--android:id="@+id/btncommit"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_weight="1"-->
    <!---->
    <!--android:textColor="@color/black"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="SEND"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

        <Button
                android:id="@+id/btn_change_Languege"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:background="@drawable/bt_clicked"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="中/EN"/>


        <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>

        <Button
                android:id="@+id/btn_scan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/bt_clicked"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/scan"/>


        <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>

        <Button
                android:id="@+id/btn_add"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@drawable/bt_clicked"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/insert"/>
    </LinearLayout>

    <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:text="*_*"/>

</LinearLayout>